@@ -18,6 +18,7 @@ New Features:
   paths
 - applications can be unloaded and loaded without restarting Red5
 - "mx.collections.ArrayCollection" objects supported by AMF3 codec
+- object attributes are converted if necessary in AMF0/AMF3 codecs
 
 Bugfixes:
 - validate RTMP handshake received from client (Jira APPSERVER-159)
